<resources>
    <string name="app_name">eletriccarapp</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favortitos">Favortitos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="Potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="km_percorrido">km percorrido</string>
    <string name="preco_por_km">preço por km</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular autonomia</string>
</resources>