<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"

    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                android:id="@+id/iv_carro"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:text="@string/preco"
                android:id="@+id/tv_preco"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_carro"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="300.000"
                android:id="@+id/tv_preco_value"
                android:layout_marginLeft="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_carro"
                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:text="@string/bateria"
                android:id="@+id/bateria"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="300 kvw"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_bateria_values"
                app:layout_constraintStart_toEndOf="@id/bateria"
                app:layout_constraintTop_toBottomOf="@id/tv_preco_value"
                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Potencia"
                android:layout_marginStart="16dp"
                android:id="@+id/tv_potencia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bateria"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="100 cv"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_potencia_values"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria_values"
                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/recarga"
                android:id="@+id/tv_recarga"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="20 min"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_recarga_values"
                app:layout_constraintStart_toEndOf="@id/tv_potencia"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia_values"
                app:layout_constraintBottom_toBottomOf="@id/cl_card"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>